loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:4: error: ';' expected but 'while' found.
  forward();/while(!crossing()){
             ^